# analise-figuracoes-latour

./: .gitignore  CLAUDE.md  README.md  briefing_claude_code.md  briefing_etapa2_artigos_latour.md  plano_de_trabalho.md  pyproject.toml  requirements.txt
campos_lexicais/: catalogo_termos_aime.yaml
corpus/: metadata.csv  qualidade_extracao.csv
docs/: decisoes_metodologicas.md  historico.md
outputs/: amostra_validacao_etapa1.csv  inventario_figuras.md  relatorio_extracao_etapa1.md  trajetoria_latour_1986_1999.csv  trajetoria_latour_1986_1999.md
refinamento/: militar_refinado_tres_obras.csv
scripts/: 01b_normalize_text.py  02_kwic.py  03_frequencies.py  04_visualizations.py  05_cooccurrence.py  06_sampling.py  07_trajectory.py  08_validate_sample.py  09_desambiguar_war.py  11_export_gephi.py  19_etapa2_finalizar_validacao.py  20_etapa2bis_tabela_5_obras.py  21_etapa2bis_validacao_migracao.py  22_etapa3_aime_pipeline.py  _desambiguar_war.py  (+4 more)
tramar-ia-figuracoes/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
tramar-ia-figuracoes/campos_lexicais/: catalogo_familias.yaml
tramar-ia-figuracoes/codebook/: esquema_codificacao.md
tramar-ia-figuracoes/corpus/: README.md
tramar-ia-figuracoes/corpus/queries/: wos_query_v1.txt
tramar-ia-figuracoes/docs/: decisoes_metodologicas.md  historico.md
tramar-ia-figuracoes/docs/prisma/: fluxograma_prisma.md
tramar-ia-figuracoes/scripts/: 01_import_wos.py  02_dedup.py  03_apply_criteria.py  04_lexical_coding.py  05_cooccurrence.py  06_distribution.py  07_topic_model.py  _paths.py
(+131 files in other folders)
