[project]
name = "tramar-ia-figuracoes"
version = "0.1.0"
description = "Análise textual sistemática de figurações e tropos em artigos científicos sobre inteligência artificial"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Juliane Helanski"},
]
license = {text = "CC-BY-4.0"}

dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "rispy>=0.9.0",
    "bibtexparser>=1.4.0",
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "scikit-learn>=1.4.0",
    "gensim>=4.3.0",
    "networkx>=3.2",
    "python-louvain>=0.16",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
topic = ["bertopic>=0.16.0"]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "pytest>=8.0.0",
    "ipython>=8.20.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
